add image and about with their styles

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -23,4 +23,33 @@
 
 a {
   color: black;
+  text-decoration: none;
+}
+
+.navbar a:hover {
+  text-decoration: underline;
+}
+
+.image {
+  background-image: url(/images/john-wick.jpg);
+  background-size: cover;
+  background-position: center;
+  min-height: calc(100vh - 50px);
+  padding-top: 50px;
+}
+
+.text {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: calc(100vh - 50px);
+
+  height: 100%;
+}
+
+.paragraph {
+  font-size: 1.2rem;
+  font-family: Arial, sans-serif;
+  line-height: 1.5;
+  text-align: center;
 }
