--- a/views/about.html
+++ b/views/about.html
@@ -4,8 +4,24 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/public/styles/style.css" />
+    <link rel="stylesheet" href="/styles/style.css" />
     <title>About</title>
   </head>
-  <body></body>
+  <body>
+    <nav class="navbar">
+      <ul>
+        <li><a href="/">Home</a></li>
+        <li><a href="/about">About</a></li>
+      </ul>
+    </nav>
+    <div class="text">
+      <p class="paragraph">
+        La ciudad de Nueva York se llena de balas cuando John Wick, un exasesino
+        a sueldo,<br />
+        regresa de su retiro para enfrentar a los mafiosos rusos, liderados por
+        Viggo Tarasov,<br />
+        que destruyeron todo aquello que él amaba y pusieron precio a su cabeza.
+      </p>
+    </div>
+  </body>
 </html>
