--- a/views/home.html
+++ b/views/home.html
@@ -15,13 +15,6 @@
       </ul>
     </nav>
 
-    <div class="text">
-      <p class="paragraph">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, ullam
-        sunt quam consequatur labore mollitia quos porro magnam alias eum
-        perferendis quibusdam possimus quaerat assumenda laboriosam neque
-        cupiditate? Consequatur, aliquid.
-      </p>
-    </div>
+    <div class="image"></div>
   </body>
 </html>
